<resources>
    <string name="app_name">Alert-Dialogs</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="alert_dialog">Alert Dialog</string>
    <string name="lorem_ipsum_dolor_sit_amet_consectetur_adipiscing_elit_mauris_volutpat_dui_non_erat_bibendum_non_tempus_enim_dictum_praesent_a_nisl_venenatis_tincidunt_magna_id">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris volutpat dui non erat bibendum, non tempus enim dictum. Praesent a nisl venenatis, tincidunt magna id.</string>
    <string name="cancel">Cancel</string>
    <string name="rating_dialog">Rating Dialog</string>
    <string name="close">Close</string>
    <string name="bad">Bad</string>
    <string name="poor">Poor</string>
    <string name="average">Average</string>
    <string name="good">Good</string>
    <string name="great">Great!</string>
    <string name="save">Save</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login_dialog">Login Dialog</string>
    <string name="spinner_dialog">Spinner Dialog</string>
    <string name="calender_picker_dialog">Calender Picker Dialog</string>
    <string name="time_picker_dialog">Time Picker Dialog</string>
    <string name="alert_dialog_custom">Alert Dialog - Custom</string>
    <string name="alert_dialog_classic">Alert Dialog - Classic</string>
    <string name="radio_dialog">Radio Dialog</string>
    <string name="multi_choose_dialog">Multi Choose Dialog</string>
</resources>