<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:orientation="vertical"
        android:id="@+id/regFrameLayout"
        android:layout_width="340dp"
        android:layout_height="400dp"
        android:layout_margin="10dp"
        android:layout_marginBottom="9dp"
        android:layout_gravity="center"
    app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical|center_horizontal"
            android:textColor="@color/dark_gray"
            android:textStyle="bold"
            android:textSize="22sp"
            android:padding="6dp"
            android:text="@string/rating_dialog"/>

        <RadioGroup
            android:id="@+id/radioGroup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="18dp">
            <RadioButton
                android:id="@+id/radioGreat"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/great"/>

            <RadioButton
                android:id="@+id/radioGood"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/good"/>
            <RadioButton
                android:id="@+id/radioAverage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/average"/>
            <RadioButton
                android:id="@+id/radioPoor"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/poor"/>
            <RadioButton
                android:id="@+id/radioBad"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/bad"/>
        </RadioGroup>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center">

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/radioDialogSave"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/save"
                android:layout_marginEnd="15dp"
                android:backgroundTint="@color/purple_200" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/radioDialogClose"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/close"
                android:layout_marginStart="15dp"
                android:backgroundTint="@color/teal_200" />

        </LinearLayout>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>